tooltips: Fix channel privacy icon vertical alignment.

--- a/web/styles/tooltips.css
+++ b/web/styles/tooltips.css
@@ -98,7 +98,6 @@
     .channel-privacy-type-icon {
         width: 9px;
         padding-left: 2px;
-        top: 0.5px;
     }
 
     /* If the reference of the tooltip is went offscreen while scrolling,
